# Geist-Agent

./: .gitignore  Notes.md  README.md
geist_agent/: Notes.md  README.md  pyproject.toml
geist_agent/reports/: report.md
geist_agent/reports/code_maps/: Unveil_08-22-2025_14-51.md  Unveil_08-23-2025_21-46.md
geist_agent/reports/scrying_reports/: AI_in_Cybersecurity_08-15-2025_19-13.md  Cat_Videos_08-16-2025_16-33.md  Global_Commands_08-27-2025_20-24.md  Poltergeists_08-18-2025_21-57.md  The_Meaning_of_Life_08-16-2025_16-35.md  The_Meaning_of_Life_08-19-2025_20-05.md  Typer_08-18-2025_15-11.md  cows_08-16-2025_20-26.md  custom_report.md
geist_agent/reports/unveil_reports/: Geist_Agent_08-25-2025_20-21.md  Geist_Agent_08-26-2025_23-09.md  Geist_Agent_08-27-2025_21-02.md  Geist_Agent_09-05-2025_16-25.md  Geist_Agent_09-05-2025_23-19.md  Job_Hunter_08-25-2025_18-33.md  Job_Hunter_08-25-2025_19-56.md  Job_Hunter_08-26-2025_23-02.md  Quail_Kingdom_Market_08-28-2025_21-24.md  Unveil_08-21-2025_15-47.md  Unveil_08-21-2025_15-54.md  Unveil_08-21-2025_20-00.md  Unveil_08-24-2025_23-06.md
geist_agent/reports/ward_reports/: Geist_Agent_08-30-2025_20-01.md  Geist_Agent_08-30-2025_21-41.md  Geist_Agent_08-31-2025_22-32.md  Geist_Agent_08-31-2025_22-50.md  Geist_Agent_09-01-2025_20-59.md  Geist_Agent_09-01-2025_22-58.md  ward_1756527159.json  ward_1756527159.md  ward_1756528430.json  ward_1756528430.md
geist_agent/src/geist_agent/: crew.py  customCrew.py  custom_run.py  doctor.py  main.py  parse.py  poltern.py  scrying.py  (+6 more)
my_ai_agent/: README.md  pyproject.toml  test.txt
(+30 files in other folders)
