[project]
name = "geist_agent"
version = "0.1.6"
description = "Geist-Agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0",
    "typer>=0.12.0",
]

[project.scripts]
geist_agent = "geist_agent.main:run"
run_crew = "geist_agent.main:run"
train = "geist_agent.main:train"
replay = "geist_agent.main:replay"
test = "geist_agent.main:test"
poltergeist = "geist_agent.poltern:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.hatch.build.targets.wheel]
packages = ["src/geist_agent"]

[tool.setuptools.package-data]
geist_agent = ["config/*.yaml"]
