[project]
name = "my_ai_agent"
version = "0.1.0"
description = "my-ai-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0"
]

[project.scripts]
my_ai_agent = "my_ai_agent.main:run"
run_crew = "my_ai_agent.main:run"
train = "my_ai_agent.main:train"
replay = "my_ai_agent.main:replay"
test = "my_ai_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
